--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@babel/preset-typescript": "^7.12.1",
+    "@types/luxon": "^1.25.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
@@ -31,6 +32,7 @@
     "react-router-dom": "^5.2.0",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^2.0.0",
+    "svg-url-loader": "^6.0.0",
     "typescript": "^4.0.3",
     "webpack": "^5.4.0",
     "webpack-cli": "^3.3.12",
