--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format:check": "prettier --config .prettierrc.yaml --list-different '{src,test}/**/*.{ts,tsx,js,jsx,html}'",
     "format": "prettier --config .prettierrc.yaml --write '{src,test}/**/*.{ts,tsx,js,jsx,html}'",
     "lint:check": "eslint '{src,test}/**/*.{ts,tsx}'",
-    "lint": "eslint --fix '{src,test}/**/*.{ts,tsx}'"
+    "lint": "eslint --fix '{src,test}/**/*.{ts,tsx}'",
+    "test": "TZ=CET jest --config=jest.conf.js --detectOpenHandles --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -17,6 +18,8 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "@babel/preset-typescript": "^7.12.1",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.15",
     "@types/luxon": "^1.25.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
@@ -24,15 +27,20 @@
     "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "eslint": "^7.13.0",
     "eslint-plugin-react": "^7.21.5",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "react-router-dom": "^5.2.0",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^6.0.0",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.0.3",
     "webpack": "^5.4.0",
     "webpack-cli": "^3.3.12",
