--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,19 +9,22 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Install and Build 🔧
-        run: |
-          npm install
-          npm run build
+      - name: install
+        run: npm install
 
-      - name: Test 🧪
+      - name: validate
         run: |
+          npm run format
+          npm run lint
           npm test
 
-      - name: Deploy 🚀
+      - name: build
+        run: npm run build
+
+      - name: deploy
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: dist
+          FOLDER: build
           CLEAN: true
