fix routing for deployment

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "pretest2",
-  "short_name": "pretest2",
+  "name": "mindgap",
+  "short_name": "mindgap",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
