--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,24 +4,24 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
 
-      - name: install
+      - name: Install
         run: npm install
 
-      - name: validate
+      - name: Validate
         run: |
           npm run format
           npm run lint
           npm test
 
-      - name: build
+      - name: Build
         run: npm run build
 
-      - name: deploy
+      - name: Deploy
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
