--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "build/*"
   ],
   "dependencies": {
+    "dayjs": "^1.9.6",
+    "history": "^5.0.0",
     "immer": "^8.0.0",
     "lazy-space": "^0.4.2",
     "preact": "^10.3.1",
-    "preact-jsx-chai": "^3.0.0",
     "preact-markup": "^2.0.0",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
